<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView13"
                style="@style/TitleFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/settings_page_title"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView001"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_page_subtitle"
                android:textColor="@color/gray_color"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView001">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="@+id/textView13"
                    app:layout_constraintTop_toBottomOf="@+id/textView13">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_page_name_title"
                        android:textColor="#03A9F4"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/assistant_settings_nomcomplet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/settings_page_name_supervisor_title"
                        android:textColor="#03A9F4"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/assistant_settings_superviseur_nom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_page_title_suscribe"
                android:textColor="@color/gray_color"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="@+id/cardView10"
                app:layout_constraintTop_toBottomOf="@+id/cardView10" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView01">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="@+id/textView13"
                    app:layout_constraintTop_toBottomOf="@+id/textView13">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#03A9F4"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:text="N° Abonnement"/>

                    <TextView
                        android:id="@+id/assistant_settings_num_abonnement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#03A9F4"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:text="Fin Abonnement"/>
                    <TextView
                        android:id="@+id/assistant_settings_nbJours_abonnement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <Button
                        android:id="@+id/assistant_settings_reabonnement_link"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="SE REABONNER"
                        android:backgroundTint="#03A9F4"
                        android:textColor="#FFF"
                        android:textSize="12sp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cardView1" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/assistant_settings_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:backgroundTint="@color/white"
                android:text="@string/settings_page_logout"
                android:textAllCaps="true"
                android:textColor="@color/color_item_amount"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="80dp"
                app:layout_constraintTop_toBottomOf="@+id/cardView1" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>