<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="0dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/btnCancelOperationWestern">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="56dp"
                        android:src="@drawable/western" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/btnCancelOperationWestern"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Annuler"
                    android:textStyle="bold"
                    android:textColor="#038DF6"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    style="@style/TitleFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:text="@string/international_western"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnCancelOperationWestern" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="15dp"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TitleFont"
                        android:textSize="18sp"
                        android:layout_marginTop="10dp"
                        android:text="@string/national_form_title"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray_color"
                        android:text="@string/national_sub_advice"/>
                    <TextView
                        android:layout_marginTop="20dp"
                        android:textSize="15sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Type d'opération"/>
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:background="@drawable/background_circular"
                        android:padding="2dp"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="43dp">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardView1100"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            app:cardCornerRadius="50dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:scaleType="centerCrop"
                                android:padding="5dp"
                                android:src="@drawable/baseline_list_alt_24"
                                android:background="@color/background_color"
                                app:tint="@color/black"/>
                        </androidx.cardview.widget.CardView>

                        <Spinner
                            android:id="@+id/type_op_spinner_western"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:background="@color/white"
                            android:layout_marginHorizontal="20dp"
                            android:hint="Montant"
                            android:inputType="number"
                            android:paddingStart="20dp"
                            android:text="0"
                            android:entries="@array/type_transaction_international"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <TextView
                        android:layout_marginTop="5dp"
                        android:textSize="15sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Téléphone"/>
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:background="@drawable/background_circular"
                        android:padding="2dp"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="43dp">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardView11001"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            app:cardCornerRadius="50dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:scaleType="centerCrop"
                                android:padding="5dp"
                                android:src="@drawable/baseline_phone_24"
                                android:background="@color/background_color"
                                app:tint="@color/black"/>
                        </androidx.cardview.widget.CardView>

                        <EditText
                            android:id="@+id/tel_input_western"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:background="@color/white"
                            android:layout_marginHorizontal="20dp"
                            android:hint="Téléphone"
                            android:inputType="number"
                            android:paddingStart="30dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <CheckBox
                            android:id="@+id/checkBoxWestern"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Ajouter une image"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            app:layout_constraintBottom_toBottomOf="@+id/checkBoxWestern"
                            app:layout_constraintStart_toEndOf="@+id/checkBoxWestern"
                            app:layout_constraintTop_toTopOf="@+id/checkBoxWestern" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/section_upload_input_western"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="10dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        app:cardElevation="0dp"
                        tools:layout_editor_absoluteX="15dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <Button
                                    android:id="@+id/uploadPhotoWestern"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Prendre un photo"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/card_transac"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="28dp"
                                    android:layout_marginBottom="20dp"
                                    app:cardCornerRadius="10dp"
                                    app:cardElevation="10dp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@+id/uploadPhotoWestern">

                                    <ImageView
                                        android:id="@+id/image_preview_western"
                                        android:layout_width="250dp"
                                        android:layout_height="150dp"
                                        android:layout_gravity="center"
                                        android:background="@drawable/background_square"
                                        android:scaleType="centerCrop" />
                                </androidx.cardview.widget.CardView>
                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_register_input_western"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:paddingHorizontal="15dp"
                        android:background="@drawable/backgroundgradientinternationalbutton"
                        android:text="@string/register_operation"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <ProgressBar
                        android:id="@+id/progressBar_input_western"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_register_input_western">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <ImageView
                    android:id="@+id/assistant_link1_western"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/moneygram" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <ImageView
                    android:id="@+id/assistant_link2_western"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ria" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</ScrollView>